<resources>
    <string name="app_name">ExpandingVocabulary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">ExpandingVocabulary</string>
    <string name="question_text">Repeat some English words?</string>
    <string name="play_button">Let\'s go</string>
    <string name="score_text">Your score</string>
    <string name="back_button">Play Again</string>
    <string name="need_translate_word">Translate word</string>
    <string name="skip_text">Skip</string>
    <string name="i_know">I know it</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current score: %d</string>
    <string name="final_score_format">Your score: %d</string>
    <string name="true_thing">Type more, see more!</string>
    <string name="translate_text">Translate</string>
    <string name="rules_info">You have a minute to check if you can translate all the words. If the translation is familiar to you, click on the "I know" button, if not, skip the word. If u do not know the word, then click on "translate" to remember it in the future. Don\'t kid yourself. Regards Marmalade :)</string>


</resources>